--- a/Delivery-Cabinet.csproj
+++ b/Delivery-Cabinet.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IO.Ports" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="check.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
